# massmail

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  git_mashmail_log.txt  massmail  pyproject.toml  setup.py  test_localmax.py  test_massmail.py  test_sending.py  test_something.py
.github/workflows/: test_pytest.yml
massmail/: __init__.py  massmail.py  test_massmail.py  test_sending.py
tests/: test_massmail.py  test_sending.py
