[project]
name = "massmail"
version = "0.2"
description = "Send mass mail"
authors = [ { name="ASPP", email ="info@aspp.school" } ]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [ "aiosmtpd", "click>=8.2.0", "email-validator>=2.0", "rich" ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    ]

[project.scripts]
massmail = "massmail.massmail:main"

[tool.setuptools]
packages = ["massmail"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
